[package]
name = "openvr_sys"
version = "2.0.0"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar",
    "Rene Eichhorn",
    "Benjamin Saunders"
]
license = "MIT"
description = "Raw unsafe system binding for openvr"
repository = "https://github.com/rust-openvr/rust-openvr-sys"
exclude = [
    "openvr/samples/*",
    "openvr/bin/*",
    "openvr/lib/*",
    "openvr/controller_callouts/*",
]
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[lib]
name = "openvr_sys"
path = "lib.rs"
